margin padding typo

--- a/cssdev/margin.css
+++ b/cssdev/margin.css
@@ -1,79 +1,79 @@
-m03 {
+.m03 {
   margin: 0.3rem;
 }
 
-mt03 {
+.mt03 {
   margin-top: 0.3rem;
 }
 
-mb03 {
+.mb03 {
   margin-bottom: 0.3rem;
 }
 
-ml03 {
+.ml03 {
   margin-left: 0.3rem;
 }
 
-mr03 {
+.mr03 {
   margin-right: 0.3rem;
 }
 
-m06 {
+.m06 {
   margin: 0.6rem;
 }
 
-mt06 {
+.mt06 {
   margin-top: 0.6rem;
 }
 
-mb06 {
+.mb06 {
   margin-bottom: 0.6rem;
 }
 
-ml06 {
+.ml06 {
   margin-left: 0.6rem;
 }
 
-mr06 {
+.mr06 {
   margin-right: 0.6rem;
 }
 
-m10 {
+.m10 {
   margin: 1rem;
 }
 
-mt10 {
+.mt10 {
   margin-top: 1rem;
 }
 
-mb10 {
+.mb10 {
   margin-bottom: 1rem;
 }
 
-ml10 {
+.ml10 {
   margin-left: 1rem;
 }
 
-mr10 {
+.mr10 {
   margin-right: 1rem;
 }
 
-m20 {
+.m20 {
   margin: 2rem;
 }
 
-mt20 {
+.mt20 {
   margin-top: 2rem;
 }
 
-mb20 {
+.mb20 {
   margin-bottom: 2rem;
 }
 
-ml20 {
+.ml20 {
   margin-left: 2rem;
 }
 
-mr20 {
+.mr20 {
   margin-right: 2rem;
 }
