--- a/cssdev/padding.css
+++ b/cssdev/padding.css
@@ -1,79 +1,79 @@
-p03 {
+.p03 {
   padding: 0.3rem;
 }
 
-pt03 {
+.pt03 {
   padding-top: 0.3rem;
 }
 
-pb03 {
+.pb03 {
   padding-bottom: 0.3rem;
 }
 
-pl03 {
+.pl03 {
   padding-left: 0.3rem;
 }
 
-pr03 {
+.pr03 {
   padding-right: 0.3rem;
 }
 
-p06 {
+.p06 {
   padding: 0.6rem;
 }
 
-pt06 {
+.pt06 {
   padding-top: 0.6rem;
 }
 
-pb06 {
+.pb06 {
   padding-bottom: 0.6rem;
 }
 
-pl06 {
+.pl06 {
   padding-left: 0.6rem;
 }
 
-pr06 {
+.pr06 {
   padding-right: 0.6rem;
 }
 
-p10 {
+.p10 {
   padding: 1rem;
 }
 
-pt10 {
+.pt10 {
   padding-top: 1rem;
 }
 
-pb10 {
+.pb10 {
   padding-bottom: 1rem;
 }
 
-pl10 {
+.pl10 {
   padding-left: 1rem;
 }
 
-pr10 {
+.pr10 {
   padding-right: 1rem;
 }
 
-p20 {
+.p20 {
   padding: 2rem;
 }
 
-pt20 {
+.pt20 {
   padding-top: 2rem;
 }
 
-pb20 {
+.pb20 {
   padding-bottom: 2rem;
 }
 
-pl20 {
+.pl20 {
   padding-left: 2rem;
 }
 
-pr20 {
+.pr20 {
   padding-right: 2rem;
 }
